tests/ui/traits/new-solver/alias-bound-unsound.stderr
error: the type `&<() as Foo>::Item` is not well-formed
  --> $DIR/alias-bound-unsound.rs:23:31
   |
LL |     drop(<() as Foo>::copy_me(&x));
   |                               ^^

error: the type `<() as Foo>::Item` is not well-formed
  --> $DIR/alias-bound-unsound.rs:23:10
   |
LL |     drop(<() as Foo>::copy_me(&x));
   |          ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

